module(
    name = "rendezqueue",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "aspect_rules_js", version = "1.42.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "rules_proto", version = "6.0.2")

bazel_dep(
    name = "fildesh",
    version = "0.1.9",
    dev_dependency = True)
git_override(
    module_name = "fildesh",
    remote = "https://github.com/fildesh/fildesh.git",
    commit="ebc9fd35d2fd4733287b417bb5149077933fd2b5",
)
bazel_dep(
    name = "rules_sxproto",
    version = "0.0.4",
    dev_dependency = True)
git_override(
    module_name = "rules_sxproto",
    remote = "https://github.com/rendezqueue/rules_sxproto.git",
    commit="70827d3da93c4aefaeee3627a9d091a975d1377b",
)
