module(
    name = "rendezqueue",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.9.2")
bazel_dep(name = "aspect_rules_js", version = "2.1.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "6.0.2")

bazel_dep(name = "fildesh", version = "0.2.0", dev_dependency = True)
bazel_dep(name = "rules_sxproto", version = "0.0.4", dev_dependency = True)
git_override(
    module_name = "rules_sxproto",
    remote = "https://github.com/rendezqueue/rules_sxproto.git",
    commit = "dc302975a4045b669876f6628b0f34454dfb4ca0",
)
